@@ -35,6 +35,8 @@ ReadPackage( "numericalsgps", "gap/numsgps-utils.gi" );
 ReadPackage( "numericalsgps", "gap/polynomials.gi" );
 ReadPackage( "numericalsgps", "gap/other-families-ns.gi" );
 ##
+ReadPackage( "numericalsgps", "gap/databases.gi" );
+##
 ## Good semigroups N^2
 ##
 ReadPackage( "numericalsgps", "gap/good-semigroups.gi");
