@@ -4,6 +4,7 @@
 
 #======
 1.3.1 -> 1.3.1 dev
+- Added NumericalSemigroupsWithMaxPrimitive
 - Changes in DotSplash due to viz.js reallocation
 - Added FiniteComplementIdealExtension
 - Functions related to Ratlif-Rush closure corrected (intersecting with the semigroup was needed as reported by M. D'Anna and F. Strazzanti)
